smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/2.1/inline-collections-union.smithy
$version: "2.1"

namespace smithy.example

// Inline collections can be used in union member target positions.
union MyUnion {
    names: [String]
    tags: {String: Integer}
}
