smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-without-member.smithy
// enum must have at least one entry

$version: "2.0"

namespace smithy.example

enum Enum {}
